[package]
name = "photosort"
version = "0.1.0"
edition = "2021"
authors = ["Roberto Angel <thelostmushroom@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kamadak-exif = "0.5.5"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
