[package]
name = "photosort"
version = "0.1.3-alpha"
edition = "2021"
authors = ["Roberto Angel <thelostmushroom@gmail.com>"]
description = "A quick tool for sorting photo/video files into folders"

[dependencies]
kamadak-exif = "0.5.5"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
indicatif = "0.17.8"
anyhow = "1.0.82"